ファイルパス修正

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <div class="cast-item">
                     <label class="open" for="pop-up">
                         <img src="./img/cast11x.png" alt="ぶち"
-                            srcset="./img/cast11x.png 400w,../img/2x/cast1@2x.png 800w">
+                            srcset="./img/cast11x.png 400w,./img/2x/cast1@2x.png 800w">
                         <br>ぶち ♂
                     </label>
                 </div>
@@ -172,7 +172,7 @@
                 <div class="cast-item">
                     <label class="open" for="pop-up2">
                         <img src="./img/cast21x.png" alt="ひめ"
-                            srcset="./img/cast21x.png 400w,../img/2x/cast2@2x.png 800w">
+                            srcset="./img/cast21x.png 400w,./img/2x/cast2@2x.png 800w">
                         <br>ひめ ♀
                     </label>
                 </div>
@@ -198,7 +198,7 @@
                 <div class="cast-item">
                     <label class="open" for="pop-up3">
                         <img src="./img/cast31x.png" alt="もか"
-                            srcset="./img/cast31x.png 400w,../img/2x/cast3@2x.png 800w">
+                            srcset="./img/cast31x.png 400w,./img/2x/cast3@2x.png 800w">
                         <br>もか ♀
                     </label>
                 </div>
@@ -224,7 +224,7 @@
                 <div class="cast-item">
                     <label class="open" for="pop-up4">
                         <img src="./img/cast41x.png" alt="きなこ"
-                            srcset="./img/cast41x.png 400w,../img/2x/cast4@2x.png 800w">
+                            srcset="./img/cast41x.png 400w,./img/2x/cast4@2x.png 800w">
                         <br>きなこ ♀
                     </label>
                 </div>
@@ -250,7 +250,7 @@
                 <div class="cast-item">
                     <label class="open" for="pop-up5">
                         <img src="./img/cast51x.png" alt="もこ"
-                            srcset="./img/cast51x.png 400w,../img/2x/cast5@2x.png 800w">
+                            srcset="./img/cast51x.png 400w,./img/2x/cast5@2x.png 800w">
                         <br>もこ ♂
                     </label>
                 </div>
@@ -276,7 +276,7 @@
                 <div class="cast-item newitem">
                     <label class="open" for="pop-up6">
                         <img src="./img/cast61x.png" alt="ぷー"
-                            srcset="./img/cast61x.png 400w,../img/2x/cast6@2x.png 800w">
+                            srcset="./img/cast61x.png 400w,./img/2x/cast6@2x.png 800w">
                         <br>ぷー ♀
                     </label>
                     <p class="new">new!!</p>
@@ -346,7 +346,7 @@
             <div class="access-innerwrap">
                 <div>
                     <img src="./img/accessimg1x.png" alt="お店の外観"
-                        srcset="./img/accessimg1x.png 400w,../img/pcaccess.jpg 2000w">
+                        srcset="./img/accessimg1x.png 400w,./img/pcaccess.jpg 2000w">
                 </div>
                 <div>
                     <p>〒155-0031 東京都世田谷区北沢２丁目１０</p>
