--- a/index.html
+++ b/index.html
@@ -329,15 +329,10 @@
         <section id="sns" class="sns">
             <h2>sns</h2>
             <div class="sp-twitter">
-                <a class="twitter-timeline" href="https://twitter.com/TwitterJP?ref_src=twsrc%5Etfw" data-width="90%"
-                    data-height="600px">Tweets by
-                    TwitterJP</a>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <a class="twitter-timeline" href="https://twitter.com/XDevelopers?ref_src=twsrc%5Etfw" data-width="320px" data-height="500px">Tweets by XDevelopers</a>
             </div>
             <div class="pc-twitter">
-                <a class="twitter-timeline" href="https://twitter.com/TwitterJP?ref_src=twsrc%5Etfw" data-width="70%"
-                    data-height="1000px">Tweets by
-                    TwitterJP</a>
+                <a class="twitter-timeline" href="https://twitter.com/XDevelopers?ref_src=twsrc%5Etfw" data-width="500px" data-height="500px">Tweets by XDevelopers</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
         </section>
